--- a/seiiir.ipynb
+++ b/seiiir.ipynb
@@ -4,19 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Motivating Examples\n",
-    "\n",
-    "## The Lorenz Equations\n",
-    "### Source\n",
-    "```\n",
-    "\\begin{align}\n",
-    "\\dot{x} & = \\sigma(y-x) \\\\\n",
-    "\\dot{y} & = \\rho x - y - xz \\\\\n",
-    "\\dot{z} & = -\\beta z + xy\n",
-    "\\end{align}\n",
-    "```\n",
-    "### Display\n",
-    "\n",
+    "# SEIIIR \n",
+    "Here are a few notes regarding SEIIIR. This is a small extension to the well SEIR compartment model for epidemics.\n",
     "$\\begin{align}\n",
     "\\dot{x} & = \\sigma(y-x) \\\\\n",
     "\\dot{y} & = \\rho x - y - xz \\\\\n",
